ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /producer
        pathType: Prefix
        backend:
          service:
            name: producer
            annotations:
              konghq.com/plugins: 12-per-min
            port:
              number: 80
      - path: /consumer
        pathType: Prefix
        backend:
          service:
            name: consumer
            annotations:
              konghq.com/plugins: 12-per-min
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product            
            port:
              number: 80
